--- a/WBV/WBV.csproj
+++ b/WBV/WBV.csproj
@@ -63,15 +63,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="DataAccess\DB.cs" />
-    <Compile Include="DataAccess\IDataConnector.cs" />
-    <Compile Include="DataAccess\ORM.cs" />
+    <Compile Include="Services\DbService.cs" />
+    <Compile Include="Interfaces\IData.cs" />
+    <Compile Include="ORM.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Result.cs" />
     <Compile Include="Ninject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Services\SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
