--- a/WBV/Web.config
+++ b/WBV/Web.config
@@ -5,6 +5,26 @@
   -->
 
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+  <log4net>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+      <param name="File" value="C:\temp\log.txt" />
+      <param name="AppendToFile" value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%-5p%d{yyyy-MM-dd hh:mm:ss} – %m%n" />
+      </layout>
+    </appender>
+  </log4net>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
