more fiddling with session injection

--- a/WBV/Web.config
+++ b/WBV/Web.config
@@ -14,7 +14,7 @@
       <appender-ref ref="LogFileAppender" />
     </root>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-      <param name="File" value="C:\temp\log.txt" />
+      <param name="File" value="c:\Users\harry\Documents\Visual Studio 2010\Projects\WBV\WBV\bin\log.txt" />
       <param name="AppendToFile" value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
