--- a/WBV/packages.config
+++ b/WBV/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="1.2.10" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Ninject" version="2.2.1.4" />
+  <package id="WebActivator" version="1.4.4" />
 </packages>
