--- a/WBV/WBV.csproj
+++ b/WBV/WBV.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Controllers\FacebookController.cs" />
     <Compile Include="Models\Facebook.cs" />
     <Compile Include="Models\Gift.cs" />
+    <Compile Include="Interfaces\IFacebookUser.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Services\DbService.cs" />
     <Compile Include="Interfaces\IData.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Ninject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
