--- a/WBV/Web.config
+++ b/WBV/Web.config
@@ -29,6 +29,10 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="username" value="cahoots@quotsy.com" />
+    <add key="password" value="Popov2010" />
+    <add key="FromAddress" value="lists@schapp.com" />
+    <add key="SmtpClient" value="smtp.strato.de" />
   </appSettings>
   <connectionStrings>
     <add name="ApplicationServices"
