added facebook stream post

--- a/WBV/Web.config
+++ b/WBV/Web.config
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
-
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <section name="facebookSettings" type="Facebook.FacebookConfigurationSection" />
   </configSections>
   <log4net>
     <root>
       <level value="DEBUG" />
       <appender-ref ref="LogFileAppender" />
     </root>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="c:\Users\harry\Documents\Visual Studio 2010\Projects\WBV\WBV\obj\Debug\log.txt" />
       <param name="AppendToFile" value="true" />
       <rollingStyle value="Size" />
@@ -26,20 +26,17 @@
     </appender>
   </log4net>
   <appSettings>
-    <add key="webpages:Version" value="1.0.0.0"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="webpages:Version" value="1.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="username" value="cahoots@quotsy.com" />
     <add key="password" value="Popov2010" />
     <add key="FromAddress" value="lists@schapp.com" />
     <add key="SmtpClient" value="smtp.strato.de" />
   </appSettings>
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=62.141.39.106\SQLEXPRESS;Initial Catalog=WBV;User Id=wbv_user;Password=Popov2010;"
-         providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=62.141.39.106\SQLEXPRESS;Initial Catalog=WBV;User Id=wbv_user;Password=Popov2010;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-    
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -50,11 +47,9 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -62,16 +57,14 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
   </system.web>
-
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -80,4 +73,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <facebookSettings appId="{app id}" appSecret="{app secret}" />
 </configuration>
