changed from email address

--- a/WBV/Web.config
+++ b/WBV/Web.config
@@ -31,7 +31,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="username" value="cahoots@quotsy.com" />
     <add key="password" value="Popov2010" />
-    <add key="FromAddress" value="lists@schapp.com" />
+    <add key="FromAddress" value="gifts@zifftly.com" />
     <add key="SmtpClient" value="smtp.strato.de" />
   </appSettings>
   <connectionStrings>
