--- a/WBV/packages.config
+++ b/WBV/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Facebook" version="5.3.2.0" />
-  <package id="log4net" version="1.2.10" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Newtonsoft.Json" version="4.0.4" />
   <package id="Ninject" version="2.2.1.4" />
+  <package id="NLog" version="2.0.0.2000" />
+  <package id="NLog.Config" version="2.0.0.2000" />
+  <package id="NUnit" version="2.5.10.11092" />
   <package id="WebActivator" version="1.4.4" />
 </packages>
